tests/baselines/reference/defaultValueInFunctionTypes.errors.txt
defaultValueInFunctionTypes.ts(1,15): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
defaultValueInFunctionTypes.ts(3,9): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
defaultValueInFunctionTypes.ts(4,11): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== defaultValueInFunctionTypes.ts (3 errors) ====
    type Foo = ({ first = 0 }: { first?: number }) => unknown;
                  ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    
    var x: (a: number = 1) => number;
            ~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    var y = <(a : string = "") => any>(undefined)
              ~~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    